Consider Button clicks for extension notifications

BUG=716782

Review-Url: https://codereview.chromium.org/2855983002
Cr-Commit-Position: refs/heads/master@{#468836}

Former-commit-id: e5d0ff4df4be89a8ec26ab26d7d468a54c294616